# autoSubtitle

./: .env.example  .gitignore  CONTRIBUTING.md  INSTALL.md  README.md  autosub.bat  generate_subtitle.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
core/: __init__.py  cli.py  config.py  logger.py  runner.py
tests/: test_cli.py  test_config.py
utils/: __init__.py  audio_extractor.py  checkpoint.py  dubbing.py  error_handler.py  subtitle_creator.py  subtitle_shield.py  timing_adjuster.py  timing_deepseek.py  transcriber.py  transcriber_faster.py  transcriber_whisper.py  translator.py  translator_deepseek.py  translator_google.py  ui.py  video_embedder.py  youtube_downloader.py
utils/ai/: context_analyzer.py  subtitle_shield.py  timing.py  transcriber.py  translator.py
utils/media/: audio_enhancer.py  media.py  subtitle_creator.py  youtube_downloader.py
utils/system/: checkpoint.py  config_wizard.py  error_handler.py  ui.py  ui_minimal.py
